--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -10557,8 +10557,8 @@ hr.line-separator {
   top: 30%;
   left: 0;
   right: 0;
-  width: 54%;
-  background: rgba(255, 255, 255, 0.5); }
+  margin: auto;
+  text-align: center; }
   /* line 801, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .cs-main-content img {
     display: inline-block;
@@ -10570,49 +10570,21 @@ hr.line-separator {
       /* line 801, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
       .cs-main-content img {
         padding-left: 0; } }
-  @media (max-width: 767px) {
-    /* line 811, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
-    .cs-main-content .title {
-      font-size: 25px !important; } }
-  /* line 817, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
-  .cs-main-content .subscribe-form input[type=text] {
-    height: 44px;
-    background-color: rgba(0, 0, 0, 0.2);
-    color: black;
-    border: none;
-    box-shadow: none;
-    border-radius: 0;
-    padding: 21px 10px 22px;
-    margin-bottom: 0; }
-  /* line 827, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
-  .cs-main-content .subscribe-form .frm_fields_container {
-    display: flex;
-    align-items: baseline;
-    justify-content: end;
-    padding-left: 5px; }
-    /* line 832, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
-    .cs-main-content .subscribe-form .frm_fields_container button {
-      height: 44px;
-      line-height: 44px;
-      text-align: center;
-      padding: 0 30px;
-      background: #f16624;
-      color: white;
-      font-weight: 700;
-      text-transform: uppercase;
-      border-radius: 4px;
-      border: 0;
-      margin: 0; }
+  /* line 811, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .cs-main-content p {
+    color: white; }
+  /* line 814, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .cs-main-content .title {
+    color: white; }
     @media (max-width: 767px) {
-      /* line 827, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
-      .cs-main-content .subscribe-form .frm_fields_container {
-        display: inline;
-        text-align: center; } }
-  /* line 851, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+      /* line 814, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+      .cs-main-content .title {
+        font-size: 25px !important; } }
+  /* line 820, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .cs-main-content .social-media {
     display: inline-block;
     padding-left: 1rem; }
-    /* line 854, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    /* line 823, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .cs-main-content .social-media i {
       color: #f16624;
       margin-bottom: 8px; }
