--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -10584,10 +10584,15 @@ hr.line-separator {
   .cs-main-content .social-media {
     display: inline-block;
     padding-left: 1rem; }
-    /* line 823, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
-    .cs-main-content .social-media i {
-      color: #f16624;
-      margin-bottom: 8px; }
+    /* line 825, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .cs-main-content .social-media a i.fa-facebook-square {
+      color: #3b5998; }
+    /* line 828, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .cs-main-content .social-media a i.fa-twitter-square {
+      color: #55acee; }
+    /* line 831, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .cs-main-content .social-media a i.fa-linkedin-square {
+      color: #0077b5; }
   @media (max-width: 767px) {
     /* line 794, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .cs-main-content {
