--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -818,15 +818,7 @@ hr.line-separator{
         padding-left: 1rem;
         a{
             i{
-                &.fa-facebook-square{
-                    color: #3b5998;
-                }
-                &.fa-twitter-square{
-                    color: #55acee; 
-                }
-                &.fa-linkedin-square{
-                    color: #0077b5;  
-                }
+                color: white;
             }
         }
     }
