--- a/wp-content/themes/toppeq/scss/_variables.scss
+++ b/wp-content/themes/toppeq/scss/_variables.scss
@@ -12,6 +12,7 @@ $input-border: #979797;
 $black-1: #121212;
 $title-color: #272727;
 
+
 $sky-blue: #87ceeb;
 $orange: #dd7649;
 $orange-1: #f4a24c; 
@@ -23,6 +24,7 @@ $grey-blue: #95aca4;
 $yellow: #ffe264;
 $light-grey: #f7f7f7;
 $light-grey-1: #8e8e8e;
+$dark-black: #333333;
 
 
 
