--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -722,7 +722,7 @@ hr.line-separator{
         }
         &:after{
             content:'';
-            background: url("../../../uploads/2020/01/logo_overlay.png") no-repeat;
+            background: url("../images/logo_overlay.png") no-repeat;
             background-position: center;
             background-size: 280px;
             opacity: 0.08;
