--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -261,3 +261,63 @@ body:not(.home){
 //         padding-top: 114px;
 //     }
 // }
+
+
+.header-bg{
+    background: url('../images/slider-img.png') no-repeat;
+    padding: 25px 65px;
+    background-size: cover;
+    width: 100%;
+    background-position: bottom;
+    .breadcrumbs-wrapper{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .title{
+            margin-top: 0.5rem;
+            color: white;
+            position: relative;
+            &:before{
+               content: "";
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                border: 2px solid $orange-3;
+                z-index: 0;
+                top: -8px;
+                left: -15px;
+                border-width: 2px 0 0 2px;
+            }
+            &:after{
+               content: "";
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                border: 2px solid $orange-3;
+                z-index: 0;
+                bottom: -8px;
+                right: -15px;
+                border-width: 0 2px 2px 0;
+                @media (max-width: 425px){
+                    right: -25px;
+                }
+            }
+            @media (max-width: 767px){
+                white-space: nowrap;
+            }
+        }
+        .breadcrumbs-inside{
+            color: white;
+            a{
+                color: $orange-3;
+                &:hover{
+                    color: white;
+                }
+            }
+        }
+        @media (max-width: 767px){
+            display: block;
+            text-align: center;
+        }
+    }
+}
