display breadcrumb only for pages

--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -85,7 +85,11 @@ body:not(.home){
             padding: 25px 0;
         }
     }
+    .header-bg{
+        display: none;
+    }
 }
+
 
 #navbarNav{    
     .navbar-nav{
