--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -28,6 +28,9 @@ hr.line-separator{
             font-size: 14px;
         }
     }
+    .header-bg{
+        display: none;
+    }
 }
 .analysis-title{
     h1{
