--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -273,6 +273,8 @@ body:not(.home){
     background-size: cover;
     width: 100%;
     background-position: bottom;
+    margin-bottom: 50px;
+    margin-top: 50px;
     .breadcrumbs-wrapper{
         display: flex;
         justify-content: space-between;
