--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -858,6 +858,15 @@ hr.line-separator{
             font-size: 25px !important;
         }
     }
+    .email-id-link{
+        color: $orange-3;
+        box-shadow: 0px 1px 0px 0px;
+        padding: 2px;
+        margin: 0 15px;
+        &:hover{
+            text-decoration: none;
+        }
+    }
     @media (max-width: 767px){
         width: 100%;
         text-align: center;
