--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -10625,12 +10625,13 @@ hr.line-separator {
   /* line 861, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .cs-main-content .email-id-link {
     color: #f16624;
-    box-shadow: 0px 1px 0px 0px;
     padding: 2px;
-    margin: 0 15px; }
+    margin: 0 15px;
+    transition: all 0.2s ease-in; }
     /* line 866, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .cs-main-content .email-id-link:hover {
-      text-decoration: none; }
+      text-decoration: none;
+      box-shadow: 0px 1px 0px 0px; }
   @media (max-width: 767px) {
     /* line 839, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .cs-main-content {
