added bg, breadcrumbs in schema format

--- a/wp-content/themes/toppeq/css/theme-styles.css
+++ b/wp-content/themes/toppeq/css/theme-styles.css
@@ -10605,37 +10605,71 @@ hr.line-separator {
   left: 0;
   right: 0;
   margin: auto;
-  text-align: center; }
-  /* line 846, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  text-align: center;
+  background: rgba(255, 255, 255, 0.06);
+  width: fit-content; }
+  /* line 848, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .cs-main-content img {
     display: inline-block;
     max-width: 100%;
     height: auto;
     width: 280px; }
-  /* line 852, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  /* line 854, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .cs-main-content p {
     color: white; }
-  /* line 855, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  /* line 857, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .cs-main-content .title {
     color: white; }
     @media (max-width: 767px) {
-      /* line 855, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+      /* line 857, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
       .cs-main-content .title {
         font-size: 25px !important; } }
-  /* line 861, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  /* line 863, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
   .cs-main-content .email-id-link {
     color: #f16624;
     padding: 2px;
     margin: 0 8px;
     transition: all 0.2s ease-in; }
-    /* line 866, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    /* line 868, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .cs-main-content .email-id-link:hover {
       text-decoration: none;
       box-shadow: 0px 1px 0px 0px; }
   @media (max-width: 767px) {
     /* line 839, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
     .cs-main-content {
+      top: 22%;
       width: 100%;
+      text-align: center; } }
+
+/* line 880, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+.contact-us-v2 .contactBox {
+  max-width: 334px;
+  width: auto;
+  -webkit-box-flex: 1;
+  flex: 1;
+  text-decoration: none;
+  border-bottom: none;
+  border-radius: 4px;
+  background: #fff;
+  -webkit-box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07);
+  position: relative;
+  text-align: center; }
+  /* line 893, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+  .contact-us-v2 .contactBox:nth-child(2) {
+    margin-left: 20px;
+    margin-right: 20px; }
+  @media (max-width: 767px) {
+    /* line 880, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_layout.scss */
+    .contact-us-v2 .contactBox {
+      display: block;
+      text-decoration: none;
+      max-width: 100%;
+      border-radius: 4px;
+      background: none;
+      margin-top: 20px;
+      margin-bottom: 30px;
+      position: relative;
       text-align: center; } }
 
 /* line 1, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
@@ -10939,11 +10973,25 @@ body:not(.home) header {
     .header-bg .breadcrumbs-wrapper .breadcrumbs-inside {
       color: white; }
       /* line 317, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
-      .header-bg .breadcrumbs-wrapper .breadcrumbs-inside a {
-        color: #f16624; }
-        /* line 319, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
-        .header-bg .breadcrumbs-wrapper .breadcrumbs-inside a:hover {
-          color: white; }
+      .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul {
+        padding-left: 0;
+        display: flex;
+        margin-top: 1rem; }
+        /* line 321, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+        .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li {
+          list-style-type: none; }
+          /* line 323, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+          .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li a {
+            color: #f16624; }
+            /* line 325, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+            .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li a span {
+              padding: 0 0.5rem; }
+            /* line 328, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+            .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li a:hover {
+              color: white; }
+          /* line 332, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
+          .header-bg .breadcrumbs-wrapper .breadcrumbs-inside ul li span {
+            padding: 0 0.5rem; }
     @media (max-width: 767px) {
       /* line 278, ../../../../var/www/html/toppeq-cms/wp-content/themes/toppeq/scss/theme/_header.scss */
       .header-bg .breadcrumbs-wrapper {
