--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -314,10 +314,24 @@ body:not(.home){
         }
         .breadcrumbs-inside{
             color: white;
-            a{
-                color: $orange-3;
-                &:hover{
-                    color: white;
+            ul{
+                padding-left: 0;
+                display: flex;
+                margin-top: 1rem;
+                li{
+                    list-style-type: none;
+                    a{
+                        color: $orange-3;
+                        span{
+                            padding: 0 0.5rem;
+                        }
+                        &:hover{
+                            color: white;
+                        }
+                    }
+                    span{
+                        padding: 0 0.5rem;
+                    }
                 }
             }
         }
