--- a/wp-content/themes/toppeq/scss/theme/_layout.scss
+++ b/wp-content/themes/toppeq/scss/theme/_layout.scss
@@ -843,6 +843,8 @@ hr.line-separator{
     right: 0;
     margin: auto;
     text-align: center;
+    background: rgba(255, 255, 255, 0.06);
+    width: fit-content;
     img{
         display: inline-block;
         max-width: 100%;
@@ -869,7 +871,39 @@ hr.line-separator{
         }
     }
     @media (max-width: 767px){
+        top: 22%;
         width: 100%;
         text-align: center;
+    }
+}
+.contact-us-v2{
+    .contactBox{
+        max-width: 334px; 
+        width: auto;
+        -webkit-box-flex: 1;
+        flex: 1;
+        text-decoration: none;
+        border-bottom: none;
+        border-radius: 4px;
+        background: #fff;
+        -webkit-box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
+        box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
+        position: relative;
+        text-align: center;
+        &:nth-child(2) {
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+        @media (max-width: 767px){
+            display: block;
+            text-decoration: none;
+            max-width: 100%;
+            border-radius: 4px;
+            background: none;
+            margin-top: 20px;
+            margin-bottom: 30px;
+            position: relative;
+            text-align: center;
+        }
     }
 }
