--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -279,6 +279,7 @@ body:not(.home){
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding: 0 20px 0 30px;
         .title{
             margin-top: 0.5rem;
             color: white;
