--- a/wp-content/themes/toppeq/scss/theme/_header.scss
+++ b/wp-content/themes/toppeq/scss/theme/_header.scss
@@ -318,7 +318,8 @@ body:not(.home){
             ul{
                 padding-left: 0;
                 display: flex;
-                margin-top: 1rem;
+                margin-top: 1rem; 
+                justify-content: center;
                 li{
                     list-style-type: none;
                     a{
